--- a/.github/workflows/6.5.1.yml
+++ b/.github/workflows/6.5.1.yml
@@ -17,6 +17,8 @@ jobs:
         with:
           node-version: '17'
           cache: 'npm'
-      - run: cd 6.5.1
+          cache-dependency-path: 6.5.1/package-lock.json
       - run: npm install
+        working-directory: 6.5.1
       - run: npm run generate
+        working-directory: 6.5.1
